--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,210 @@
-.App {
-  text-align: center;
+.app{
+    height: 100vh;
+    display: flex;
+    background-color:#020230 ;
+    color: white;
+}
+.main{
+    width: 75%;
+    background:
+        url("./assets/bg.jpg") center;
+        display: flex;
+        flex-direction: column;
+}
+.top{
+height: 50%;
+position: relative;
+
+}
+.timer{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 4px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    bottom :10px;
+    left:80px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bottom{
+    height: 50%;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.trivia{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quesiton{
+    width: 80%;
+    background: linear-gradient(#100241,black);
+    border: 2px solid white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+}
+.answers{
+   width: 100%; 
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+.answer{
+    width: 40%;
+    padding: 10px;
+    text-align: center;
+    background: linear-gradient(#0e0124,#22074d);
+    border: 1px solid white;
+
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0 10px 20px 10px;
+    cursor: pointer;
+
+}
+.answer:hover, .active{
+    background:mediumblue;
+}
+ .answer.correct{
+    animation: correct 3s ease forwards;
+}
+@keyframes correct {
+    0%,
+    22%,
+    42%{
+        background: mediumblue;
+    }
+
+    20%,
+    40%,
+    60%{
+        background: linear-gradient(#0e0124,#22074d);
+
+    }
+
+    62%,
+    100%{
+        background: green;
+    }
+}
+
+.answer.wrong{
+    animation: wrong 3s ease forwards;
+}
+@keyframes wrong {
+    0%,
+    22%,
+    42%{
+        background: mediumblue;
+    }
+
+    20%,
+    40%,
+    60%{
+        background: linear-gradient(#0e0124,#22074d);
+
+    }
+
+    62%,
+    100%{
+        background: red;
+    }
+}
+
+
+.pyramid{
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.moneyList{
+    list-style: none;
+    width: 100%;
+    padding: 20px;
+}
+.moneyListItem{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 5px;
+  border-radius: 5%;
+}
+.moneyListItem .active {
+
+    background-color: skyblue;
+}
+.moneyListItemNumber{
+    font-size: 18px;
+    font-weight: 100;
+    width: 30%;
 }
 
-.App-link {
-  color: #61dafb;
+.moneyListItemAmount{
+    font-size: 20px;
+    font-weight: 300;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.endText{
+    position: relative;
+    text-align: center;
+    top:0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    margin: auto;
+    padding: 10px;
+    background:darkblue;
+    border-radius: 25%;
+    width: 100%;
+}
+
+.start{
+    width: 250px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top:0;
+    left:0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
+
+.startInput{
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 18px;
+    margin: 10px;
+}
+
+.startInput:focus{
+    outline: none;
+}
+
+.startButton{
+    width: 100%;
+    height: 30px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: hsl(120, 91%, 42%);
+    font-size: 20px;
 }
